Bug 209671 [prov] Update of the agent fails in the unconfigure phase